(executable
 (name rewriter)
 (modules rewriter)
 (libraries
  ppxlib
  lib1
  camlp5
  camlp5.pa_o
  camlp5.pr_o
  camlp5.extend
  camlp5.quotations))

(rule
 (targets rewriter_p5.exe)
 (deps %{project_root}/lib/lib1.cmxa)
 (action
  (run
   mkcamlp5.opt
   -package
   camlp5,camlp5.pa_o,camlp5.pr_o,camlp5.extend,camlp5.quotations
   %{deps}
   -verbose
   -o
   %{targets})))
